# bridgewatcher

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  logging.conf.json  main.py  pyproject.toml  requirements.txt  run.sh  seed.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
init/: 01-init.sh
res/: items.txt
src/: __init__.py  api.py  calc.py  client.py  commands.py  constants.py  db.py  market.py  server.py  utils.py
src/bridgewatcher/: __init__.py  api.py  client.py  db.py  loggers.py  market.py  server.py
src/bridgewatcher/api/: __init__.py  fetch.py  model.py
src/bridgewatcher/calc/: __init__.py  crafter.py  market_flipper.py  market_helper.py
src/bridgewatcher/commands/: calcs.py  error_handler.py  info.py  settings.py  social.py
src/bridgewatcher/components/: cards.py  modals.py  ui.py
src/bridgewatcher/db/: __init__.py
src/bridgewatcher/discord/: __init__.py  embed.py  server.py
src/bridgewatcher/market/: consts.py  crafter.py  market_flipper.py  market_helper.py  model.py
src/bridgewatcher/util/: exc.py
src/bridgewatcher/utils/: annotations.py  constants.py  embeds.py  formatting.py  logging.py
src/commands/: calcs.py  error_handler.py  info.py  settings.py  social.py
src/components/: cards.py  modals.py  ui.py
src/config/: __init__.py  config.py
src/db/: __init__.py  database.py  manager.py
src/utils/: __init__.py  annotations.py  constants.py  embeds.py  formatting.py  logging.py
(+26 files in other folders)
